--- a/app/index.html
+++ b/app/index.html
@@ -82,10 +82,10 @@
     <div class="row">
       <div class="col-xs-12">
         <ul class="home-list">
-          <li>
+          <li data-test="Querying">
             <a href="/commands/querying">Querying</a>
             <ul>
-              <li\><a href="/commands/querying">get</a></li>
+              <li><a href="/commands/querying">get</a></li>
               <li><a href="/commands/querying">contains</a></li>
               <li><a href="/commands/querying">within</a></li>
               <li><a href="/commands/querying">root</a></li>
